miniextendr-macros/tests/ui/derive_externalptr_unknown_class_system.stderr
error: unknown class system 'flutter'; expected one of: env, r6, s3, s4, s7, vctrs
 --> tests/ui/derive_externalptr_unknown_class_system.rs:6:15
  |
6 | #[externalptr(flutter)]
  |               ^^^^^^^
