miniextendr-macros/tests/ui/derive_externalptr_unknown_class_system.rs
//! Test: unknown class system in ExternalPtr derive.

use miniextendr_macros::ExternalPtr;

#[derive(ExternalPtr)]
#[externalptr(flutter)]
struct MyType {
    val: i32,
}

fn main() {}
